fix: overflowing projectcards and skills bg change

--- a/src/Projects/ProjectCard.module.css
+++ b/src/Projects/ProjectCard.module.css
@@ -8,7 +8,6 @@
   border: 2px solid black;
   color: black;
   border-radius: 16px;
-  margin: 12px 0px;
 }
 
 .textContainer {
@@ -32,7 +31,7 @@ button {
   border-radius: 10px;
   margin: 10px;
   width: auto;
-  padding: 12px 16px;
+  padding: 8px 12px;
   box-shadow: 5px 5px;
   transition: all 0.5s ease;
 }
@@ -48,11 +47,13 @@ button:active {
 
 @media screen and (max-width: 1024px) {
   .container {
-    grid-template-columns: auto;
-    gap: 0rem;
+    gap: 1rem;
   }
   .textContainer > h3 {
     text-align: center;
+  }
+  button {
+    padding: 8px 12px;
   }
 }
 
@@ -61,11 +62,11 @@ button:active {
     width: 128px;
   }
   .container {
-    padding: 24px;
+    padding: 20px;
     margin: 0px;
   }
   .textContainer {
-    font-size: 16px;
+    font-size: 14px;
     text-align: center;
   }
   .textContainer > h3 {
