--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -19,12 +19,11 @@
   margin: 24px auto;
   display: grid;
   gap: 4rem;
-  grid-template-columns: auto auto;
 }
 
 @media screen and (max-width: 1024px) {
   .mainContent {
-    top: 25%;
+    top: 30%;
   }
   .projects {
     grid-template-columns: auto;
